# psz3

./: .gitignore  CMakeLists.txt  SZProgressiveMQuantV3.hpp  sz_pinterp_mquant_v3.cpp
include/SZ3/api/: sz.hpp
include/SZ3/api/impl/: SZAlgoInterp.hpp  SZImpl.hpp
include/SZ3/compressor/: SZInterpolationCompressor.hpp  SZProgressiveDeltaCompressor.hpp  SZProgressiveMQuantV3.hpp
include/SZ3/encoder/: ArithmeticEncoder.hpp  BitplaneEncoder.hpp  BypassEncoder.hpp  RunlengthEncoder.hpp
include/SZ3/lossless/: Lossless_zstd.hpp
include/SZ3/quantizer/: IntegerQuantizer2.hpp  NegabinaryQuantizer.hpp
include/SZ3/utils/: ByteUtil.hpp  Interpolators.hpp  Statistic.hpp  Verification.hpp
test/: CMakeLists.txt  sz_pinterp_mquant_v3.cpp
tools/sz3/: sz3.cpp
